--- a/hls-test-utils/hls-test-utils.cabal
+++ b/hls-test-utils/hls-test-utils.cabal
@@ -1,6 +1,6 @@
 cabal-version: 2.4
 name:          hls-test-utils
-version:       1.6.0.0
+version:       2.0.0.0
 synopsis:      Utilities used in the tests of Haskell Language Server
 description:
   Please see the README on GitHub at <https://github.com/haskell/haskell-language-server#readme>
@@ -41,9 +41,9 @@ library
     , directory
     , extra
     , filepath
-    , ghcide                  ^>= 1.10
+    , ghcide                  == 2.0.0.0
     , hls-graph
-    , hls-plugin-api          ^>=1.6
+    , hls-plugin-api          == 2.0.0.0
     , lens
     , lsp                     ^>=1.6.0.0
     , lsp-test                ^>=0.14
