--- a/plugins/hls-cabal-plugin/hls-cabal-plugin.cabal
+++ b/plugins/hls-cabal-plugin/hls-cabal-plugin.cabal
@@ -1,6 +1,6 @@
 cabal-version:      3.0
 name:               hls-cabal-plugin
-version:            0.1.0.0
+version:            2.0.0.0
 synopsis:           Cabal integration plugin with Haskell Language Server
 description:
   Please see the README on GitHub at <https://github.com/haskell/haskell-language-server#readme>
@@ -48,10 +48,10 @@ library
     , deepseq
     , directory
     , extra                 >=1.7.4
-    , ghcide                ^>= 1.9 || ^>= 1.10
+    , ghcide                == 2.0.0.0
     , hashable
-    , hls-plugin-api        ^>=1.6
-    , hls-graph             ^>=1.9
+    , hls-plugin-api        == 2.0.0.0
+    , hls-graph             == 2.0.0.0
     , lsp                   ^>=1.6.0.0
     , lsp-types             ^>=1.6.0.0
     , regex-tdfa            ^>=1.3.1
@@ -74,7 +74,7 @@ test-suite tests
     , filepath
     , ghcide
     , hls-cabal-plugin
-    , hls-test-utils    ^>=1.6
+    , hls-test-utils    == 2.0.0.0
     , lens
     , lsp-types
     , tasty-hunit
