--- a/plugins/hls-class-plugin/hls-class-plugin.cabal
+++ b/plugins/hls-class-plugin/hls-class-plugin.cabal
@@ -1,6 +1,6 @@
 cabal-version:      2.4
 name:               hls-class-plugin
-version:            1.1.1.1
+version:            2.0.0.0
 synopsis:
   Class/instance management plugin for Haskell Language Server
 
@@ -39,10 +39,10 @@ library
     , deepseq
     , extra
     , ghc
-    , ghcide          ^>=1.9 || ^>= 1.10
+    , ghcide          == 2.0.0.0
     , ghc-boot-th
     , hls-graph
-    , hls-plugin-api  ^>=1.6
+    , hls-plugin-api  == 2.0.0.0
     , lens
     , lsp
     , text
@@ -74,7 +74,7 @@ test-suite tests
     , ghcide
     , hls-class-plugin
     , hls-plugin-api
-    , hls-test-utils     ^>=1.6
+    , hls-test-utils     == 2.0.0.0
     , lens
     , lsp-types
     , text
