--- a/plugins/hls-code-range-plugin/hls-code-range-plugin.cabal
+++ b/plugins/hls-code-range-plugin/hls-code-range-plugin.cabal
@@ -1,6 +1,6 @@
 cabal-version:      2.4
 name:               hls-code-range-plugin
-version:            1.1.0.0
+version:            2.0.0.0
 synopsis:
   HLS Plugin to support smart selection range and Folding range
 
@@ -37,9 +37,9 @@ library
     , containers
     , deepseq
     , extra
-    , ghcide           ^>=1.9 || ^>= 1.10
+    , ghcide           == 2.0.0.0
     , hashable
-    , hls-plugin-api   ^>=1.6
+    , hls-plugin-api   == 2.0.0.0
     , lens
     , lsp
     , mtl
@@ -62,9 +62,9 @@ test-suite tests
     , bytestring
     , containers
     , filepath
-    , ghcide                     ^>=1.8 || ^>= 1.9 || ^>= 1.10
+    , ghcide                     == 2.0.0.0
     , hls-code-range-plugin
-    , hls-test-utils             ^>=1.6
+    , hls-test-utils             == 2.0.0.0
     , lens
     , lsp
     , lsp-test
