--- a/plugins/hls-refactor-plugin/hls-refactor-plugin.cabal
+++ b/plugins/hls-refactor-plugin/hls-refactor-plugin.cabal
@@ -1,6 +1,6 @@
 cabal-version:      3.0
 name:               hls-refactor-plugin
-version:            1.2.0.0
+version:            2.0.0.0
 synopsis:           Exactprint refactorings for Haskell Language Server
 description:
   Please see the README on GitHub at <https://github.com/haskell/haskell-language-server#readme>
@@ -68,8 +68,8 @@ library
     , ghc-boot
     , regex-tdfa
     , text-rope
-    , ghcide                ^>=1.10
-    , hls-plugin-api        ^>=1.6
+    , ghcide                == 2.0.0.0
+    , hls-plugin-api        == 2.0.0.0
     , lsp
     , text
     , transformers
@@ -100,7 +100,7 @@ test-suite tests
     , base
     , filepath
     , hls-refactor-plugin
-    , hls-test-utils      ^>=1.6
+    , hls-test-utils      == 2.0.0.0
     , lens
     , lsp-types
     , text
