--- a/plugins/hls-refine-imports-plugin/hls-refine-imports-plugin.cabal
+++ b/plugins/hls-refine-imports-plugin/hls-refine-imports-plugin.cabal
@@ -1,6 +1,6 @@
 cabal-version:      2.4
 name:               hls-refine-imports-plugin
-version:            1.0.5.0
+version:            2.0.0.0
 synopsis:           Refine imports plugin for Haskell Language Server
 description:
   Please see the README on GitHub at <https://github.com/haskell/haskell-language-server#readme>
@@ -29,10 +29,10 @@ library
     , containers
     , deepseq
     , ghc
-    , ghcide                       ^>=1.10
-    , hls-explicit-imports-plugin  ^>=1.2
+    , ghcide                       == 2.0.0.0
+    , hls-explicit-imports-plugin  == 2.0.0.0
     , hls-graph
-    , hls-plugin-api               ^>=1.6
+    , hls-plugin-api               == 2.0.0.0
     , lsp
     , text
     , unordered-containers
