--- a/plugins/hls-rename-plugin/hls-rename-plugin.cabal
+++ b/plugins/hls-rename-plugin/hls-rename-plugin.cabal
@@ -1,6 +1,6 @@
 cabal-version:      2.4
 name:               hls-rename-plugin
-version:            1.0.2.1
+version:            2.0.0.0
 synopsis:           Rename plugin for Haskell Language Server
 description:
   Please see the README on GitHub at <https://github.com/haskell/haskell-language-server#readme>
@@ -29,11 +29,11 @@ library
     , extra
     , ghc
     , ghc-exactprint
-    , ghcide                ^>= 1.9 || ^>= 1.10
+    , ghcide                == 2.0.0.0
     , hashable
     , hiedb
     , hie-compat
-    , hls-plugin-api        ^>= 1.3 || ^>=1.4 || ^>= 1.5 || ^>= 1.6
+    , hls-plugin-api        == 2.0.0.0
     , hls-refactor-plugin
     , lsp
     , lsp-types
@@ -58,4 +58,4 @@ test-suite tests
     , filepath
     , hls-plugin-api
     , hls-rename-plugin
-    , hls-test-utils             ^>=1.6
+    , hls-test-utils             == 2.0.0.0
