Move to maybeT and fix 8.10 flags issue

--- a/plugins/hls-refine-imports-plugin/hls-refine-imports-plugin.cabal
+++ b/plugins/hls-refine-imports-plugin/hls-refine-imports-plugin.cabal
@@ -35,6 +35,7 @@ library
     , hls-plugin-api               == 2.1.0.0
     , lsp
     , text
+    , transformers
     , unordered-containers
 
   default-language:   Haskell2010
