--- a/stack-lts21.yaml
+++ b/stack-lts21.yaml
@@ -1,4 +1,4 @@
-resolver: nightly-2023-07-10 # ghc-9.6.2
+resolver: lts-21.2 # ghc-9.4
 
 packages:
   - .
@@ -20,7 +20,7 @@ packages:
   - ./plugins/hls-explicit-fixity-plugin
   - ./plugins/hls-explicit-imports-plugin
   - ./plugins/hls-explicit-record-fields-plugin
-  # - ./plugins/hls-floskell-plugin
+  - ./plugins/hls-floskell-plugin
   - ./plugins/hls-fourmolu-plugin
   - ./plugins/hls-gadt-plugin
   # - ./plugins/hls-haddock-comments-plugin
@@ -42,20 +42,16 @@ packages:
 ghc-options:
   "$everything": -haddock
 
-# Remove this after https://github.com/haskell-works/hw-prim/pull/146 merged
-allow-newer: true
-
 extra-deps:
-# - floskell-0.10.7
+- floskell-0.10.7
 - hiedb-0.4.3.0
 - implicit-hie-0.1.2.7
 - implicit-hie-cradle-0.5.0.1
-- fourmolu-0.12.0.0
+- monad-dijkstra-0.1.1.3
 - algebraic-graphs-0.6.1
 - retrie-1.2.2
-- hw-fingertree-0.1.2.1
-- hw-prim-0.6.3.2
-- ansi-terminal-0.11.5
+- stylish-haskell-0.14.4.0
+- strict-0.4.0.1
 
 configure-options:
   ghcide:
@@ -71,6 +67,8 @@ flags:
   # Stack doesn't support automatic flags.
   hyphenation:
     embed: true
+  stylish-haskell:
+    ghc-lib: true
 
 nix:
   packages: [ icu libcxx zlib ]
