Resolve for explicit-imports (#3682)

--- a/plugins/hls-explicit-imports-plugin/test/testdata/hie.yaml
+++ b/plugins/hls-explicit-imports-plugin/test/testdata/hie.yaml
@@ -1,6 +1,10 @@
+
 cradle:
   direct:
     arguments:
+    - OnlyThis.hs
+    - StaleAction.hs
     - UsualCase.hs
     - Exported.hs
     - A.hs
+    - B.hs
