--- a/hls-plugin-api/hls-plugin-api.cabal
+++ b/hls-plugin-api/hls-plugin-api.cabal
@@ -40,11 +40,13 @@ library
     Ide.Plugin.RangeMap
     Ide.PluginUtils
     Ide.Types
+    Ide.Logger
 
   hs-source-dirs:     src
   build-depends:
     , aeson
     , base                  >=4.12    && <5
+    , co-log-core
     , containers
     , data-default
     , dependent-map
@@ -61,10 +63,14 @@ library
     , lsp                   ^>=2.0.0.0
     , opentelemetry         >=0.4
     , optparse-applicative
+    , prettyprinter
     , regex-tdfa            >=1.3.1.0
     , row-types
+    , stm
     , text
+    , time
     , transformers
+    , unliftio
     , unordered-containers
     , megaparsec > 9
 
