--- a/plugins/hls-refactor-plugin/hls-refactor-plugin.cabal
+++ b/plugins/hls-refactor-plugin/hls-refactor-plugin.cabal
@@ -86,6 +86,9 @@ library
     , lens
     , data-default
     , time
+    -- FIXME: Only needed to workaround for qualified imports in GHC 9.4
+    , regex-applicative-text
+    , parser-combinators
   ghc-options: -Wall -Wno-name-shadowing
   default-language: Haskell2010
 
