--- a/hls-plugin-api/hls-plugin-api.cabal
+++ b/hls-plugin-api/hls-plugin-api.cabal
@@ -34,6 +34,7 @@ source-repository head
 
 library
   exposed-modules:
+    Ide.Plugin.Error
     Ide.Plugin.Config
     Ide.Plugin.ConfigUtils
     Ide.Plugin.Properties
@@ -61,6 +62,7 @@ library
     , lsp                   ^>=2.0.0.0
     , opentelemetry         >=0.4
     , optparse-applicative
+    , prettyprinter
     , regex-tdfa            >=1.3.1.0
     , row-types
     , text
