--- a/.github/workflows/nix.yml
+++ b/.github/workflows/nix.yml
@@ -103,6 +103,10 @@ jobs:
     # We only build nix dev shell for current GHC version because some are
     # failing with different GHC version on darwin.
     - name: Build development shell with nix dependencies for current GHC version
+      if: matrix.os == 'macOS-latest'
+      run: nix develop --print-build-logs .#haskell-language-server-dev-nix --profile dev
+    - name: Build development shells with nix dependencies
+      if: matrix.os == 'ubuntu-latest'
       run: nix develop --print-build-logs .#all-nix-dev-shells --profile dev
     - name: Push development shell
       if: ${{ env.HAS_TOKEN == 'true' }}
