--- a/plugins/hls-overloaded-record-dot-plugin/hls-overloaded-record-dot-plugin.cabal
+++ b/plugins/hls-overloaded-record-dot-plugin/hls-overloaded-record-dot-plugin.cabal
@@ -62,6 +62,7 @@ test-suite tests
       , ghcide
       , text
       , hls-overloaded-record-dot-plugin
+      , hls-plugin-api
       , lens
       , lsp-test
       , lsp-types
