--- a/plugins/hls-eval-plugin/hls-eval-plugin.cabal
+++ b/plugins/hls-eval-plugin/hls-eval-plugin.cabal
@@ -55,6 +55,7 @@ library
   build-depends:
     , aeson
     , base                  >=4.12  && <5
+    , bytestring
     , containers
     , data-default
     , deepseq
