--- a/test/testdata/definition/definitions.cabal
+++ b/test/testdata/definition/definitions.cabal
@@ -8,3 +8,5 @@ library
   other-modules:    Bar
   default-language: Haskell2010
   build-depends:    base
+                  , containers
+  ghc-options: -fwrite-ide-info
