--- a/ghcide/ghcide.cabal
+++ b/ghcide/ghcide.cabal
@@ -347,6 +347,7 @@ test-suite ghcide-tests
         lens,
         list-t,
         lsp-test ^>= 0.15,
+        mtl,
         monoid-subclasses,
         network-uri,
         QuickCheck,
@@ -383,6 +384,7 @@ test-suite ghcide-tests
         HieDbRetry
         Development.IDE.Test
         Development.IDE.Test.Diagnostic
+        ExceptionTests
         -- Tests that have been pulled out of the main file
         BootTests
         CodeLensTests
