--- a/ghcide/test/data/dependency/dependency.cabal
+++ b/ghcide/test/data/dependency/dependency.cabal
@@ -7,5 +7,5 @@ library
   exposed-modules:  Dependency
   default-language: Haskell2010
   build-depends:    base
-                  , lucid2
+                  , async == 2.2.4
   ghc-options: -fwrite-ide-info
