--- a/test/testdata/definition/definitions.cabal
+++ b/test/testdata/definition/definitions.cabal
@@ -8,5 +8,5 @@ library
   other-modules:    Bar
   default-language: Haskell2010
   build-depends:    base
-                  , aeson
+                  , containers
   ghc-options: -fwrite-ide-info
