--- a/plugins/hls-stan-plugin/hls-stan-plugin.cabal
+++ b/plugins/hls-stan-plugin/hls-stan-plugin.cabal
@@ -46,7 +46,7 @@ library
     , text
     , transformers
     , unordered-containers
-    , stan
+    , stan >= 0.1.1.0
 
   default-language:   Haskell2010
   default-extensions:
