--- a/plugins/hls-floskell-plugin/hls-floskell-plugin.cabal
+++ b/plugins/hls-floskell-plugin/hls-floskell-plugin.cabal
@@ -21,14 +21,14 @@ source-repository head
     location: https://github.com/haskell/haskell-language-server.git
 
 library
-  -- Plugins that need exactprint have not been updated for 9.8 yet
-  if impl(ghc >= 9.5)
+  -- floskell does not support GHC 9.8 yet
+  if impl(ghc >= 9.7)
     buildable: False
   exposed-modules:  Ide.Plugin.Floskell
   hs-source-dirs:   src
   build-depends:
     , base            >=4.12 && <5
-    , floskell        ^>=0.10
+    , floskell        ^>=0.10.8
     , ghcide          == 2.5.0.0
     , hls-plugin-api  == 2.5.0.0
     , lsp-types       ^>=2.1
@@ -39,7 +39,7 @@ library
   default-language: Haskell2010
 
 test-suite tests
-  if impl(ghc >= 9.5)
+  if impl(ghc >= 9.7)
     buildable: False
   type:             exitcode-stdio-1.0
   default-language: Haskell2010
