--- a/haskell-language-server.cabal
+++ b/haskell-language-server.cabal
@@ -319,7 +319,7 @@ common fourmolu
     cpp-options: -Dhls_fourmolu
 
 common ormolu
-  if flag(ormolu) && impl(ghc < 9.7)
+  if flag(ormolu) 
     build-depends: hls-ormolu-plugin == 2.5.0.0
     cpp-options: -Dhls_ormolu
 
