--- a/stack.yaml
+++ b/stack.yaml
@@ -55,6 +55,7 @@ extra-deps:
 - lsp-2.3.0.0
 - lsp-test-0.16.0.1
 - lsp-types-2.1.0.0
+- monad-dijsktra-0.1.1.4
 
 # stan dependencies not found in the stackage snapshot
 - stan-0.1.0.2
