--- a/plugins/hls-fourmolu-plugin/hls-fourmolu-plugin.cabal
+++ b/plugins/hls-fourmolu-plugin/hls-fourmolu-plugin.cabal
@@ -22,16 +22,18 @@ source-repository head
   type:     git
   location: git://github.com/haskell/haskell-language-server.git
 
+common warnings
+  ghc-options: -Wall -Wunused-packages
+
 library
+  import: warnings
   exposed-modules:
       Ide.Plugin.Fourmolu
   hs-source-dirs:   src
-  ghc-options:      -Wall
   build-depends:
     , base            >=4.12 && <5
     , filepath
     , fourmolu        ^>= 0.14
-    , ghc
     , ghc-boot-th
     , ghcide          == 2.6.0.0
     , hls-plugin-api  == 2.6.0.0
@@ -45,17 +47,17 @@ library
   default-language: Haskell2010
 
 test-suite tests
+  import: warnings
   type:             exitcode-stdio-1.0
   default-language: Haskell2010
   hs-source-dirs:   test
   main-is:          Main.hs
-  ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N
+  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
   build-tool-depends:
     fourmolu:fourmolu
   build-depends:
     , base            >=4.12 && <5
     , aeson
-    , containers
     , filepath
     , hls-fourmolu-plugin
     , hls-plugin-api
