--- a/plugins/hls-ormolu-plugin/hls-ormolu-plugin.cabal
+++ b/plugins/hls-ormolu-plugin/hls-ormolu-plugin.cabal
@@ -22,18 +22,20 @@ source-repository head
     type:     git
     location: https://github.com/haskell/haskell-language-server.git
 
+common warnings
+  ghc-options: -Wall -Wunused-packages
+
 library
+  import:           warnings
   exposed-modules:  Ide.Plugin.Ormolu
   hs-source-dirs:   src
   build-depends:
     , base            >=4.12  && <5
     , extra
     , filepath
-    , ghc
     , ghc-boot-th
     , ghcide          == 2.6.0.0
     , hls-plugin-api  == 2.6.0.0
-    , lens
     , lsp
     , mtl
     , process-extras  >= 0.7.1
@@ -44,6 +46,7 @@ library
   default-language: Haskell2010
 
 test-suite tests
+  import:           warnings
   type:             exitcode-stdio-1.0
   default-language: Haskell2010
   hs-source-dirs:   test
@@ -54,11 +57,9 @@ test-suite tests
   build-depends:
     , base
     , aeson
-    , containers
     , filepath
     , hls-ormolu-plugin
     , hls-plugin-api
     , hls-test-utils     == 2.6.0.0
     , lsp-types
-    , text
     , ormolu
