--- a/plugins/hls-gadt-plugin/hls-gadt-plugin.cabal
+++ b/plugins/hls-gadt-plugin/hls-gadt-plugin.cabal
@@ -19,7 +19,15 @@ source-repository head
     type:     git
     location: https://github.com/haskell/haskell-language-server.git
 
+common warnings
+  ghc-options:
+    -Wall
+    -Wunused-packages
+    -Wno-name-shadowing
+    -Wno-unticked-promoted-constructors
+
 library
+  import: warnings
   exposed-modules:    Ide.Plugin.GADT
   other-modules:      Ide.Plugin.GHC
 
@@ -31,7 +39,6 @@ library
     , extra
     , ghc
     , ghcide                 == 2.6.0.0
-    , ghc-boot-th
     , ghc-exactprint
     , hls-plugin-api         == 2.6.0.0
     , hls-refactor-plugin
@@ -40,16 +47,12 @@ library
     , mtl
     , text
     , transformers
-    , unordered-containers
 
-  ghc-options:
-    -Wall
-    -Wno-name-shadowing
-    -Wno-unticked-promoted-constructors
   default-language:   Haskell2010
   default-extensions: DataKinds
 
 test-suite tests
+  import: warnings
   type:             exitcode-stdio-1.0
   default-language: Haskell2010
   hs-source-dirs:   test
@@ -60,7 +63,4 @@ test-suite tests
     , filepath
     , hls-gadt-plugin
     , hls-test-utils              == 2.6.0.0
-    , lens
-    , lsp
-    , lsp-test
     , text
