--- a/plugins/hls-stylish-haskell-plugin/hls-stylish-haskell-plugin.cabal
+++ b/plugins/hls-stylish-haskell-plugin/hls-stylish-haskell-plugin.cabal
@@ -19,14 +19,17 @@ source-repository head
     type:     git
     location: https://github.com/haskell/haskell-language-server.git
 
+common warnings
+  ghc-options: -Wall -Wunused-packages
+
 library
+  import: warnings
   exposed-modules:  Ide.Plugin.StylishHaskell
   hs-source-dirs:   src
   build-depends:
     , base             >=4.12 && <5
     , directory
     , filepath
-    , ghc
     , ghc-boot-th
     , ghcide           == 2.6.0.0
     , hls-plugin-api   == 2.6.0.0
@@ -38,6 +41,7 @@ library
   default-language: Haskell2010
 
 test-suite tests
+  import: warnings
   type:             exitcode-stdio-1.0
   default-language: Haskell2010
   hs-source-dirs:   test
