--- a/haskell-language-server.cabal
+++ b/haskell-language-server.cabal
@@ -224,6 +224,56 @@ common class
     build-depends: hls-class-plugin == 2.6.0.0
     cpp-options: -Dhls_class
 
+library hls-class-plugin
+  import: warnings
+  exposed-modules:    Ide.Plugin.Class
+  other-modules:      Ide.Plugin.Class.CodeAction
+                    , Ide.Plugin.Class.CodeLens
+                    , Ide.Plugin.Class.ExactPrint
+                    , Ide.Plugin.Class.Types
+                    , Ide.Plugin.Class.Utils
+  hs-source-dirs:     plugins/hls-class-plugin/src
+  build-depends:
+    , aeson
+    , base            >=4.12 && <5
+    , containers
+    , deepseq
+    , extra
+    , ghc
+    , ghc-exactprint  >= 1.5
+    , ghcide          == 2.6.0.0
+    , hls-graph
+    , hls-plugin-api  == 2.6.0.0
+    , lens
+    , lsp
+    , mtl
+    , text
+    , transformers
+
+  default-language:   Haskell2010
+  default-extensions:
+    DataKinds
+    TypeOperators
+    OverloadedStrings
+
+test-suite hls-class-plugin-tests
+  import: warnings
+  type:             exitcode-stdio-1.0
+  default-language: Haskell2010
+  hs-source-dirs:   plugins/hls-class-plugin/test
+  main-is:          Main.hs
+  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
+  build-depends:
+    , base
+    , filepath
+    , ghcide
+    , hls-class-plugin
+    , hls-test-utils     == 2.6.0.0
+    , lens
+    , lsp-types
+    , row-types
+    , text
+
 -----------------------------
 -- call-hierarchy plugin
 -----------------------------
