--- a/haskell-language-server.cabal
+++ b/haskell-language-server.cabal
@@ -288,6 +288,53 @@ common callHierarchy
     build-depends: hls-call-hierarchy-plugin == 2.6.0.0
     cpp-options: -Dhls_callHierarchy
 
+library hls-call-hierarchy-plugin
+  import: warnings
+  buildable: True
+  exposed-modules:    Ide.Plugin.CallHierarchy
+  other-modules:
+    Ide.Plugin.CallHierarchy.Internal
+    Ide.Plugin.CallHierarchy.Query
+    Ide.Plugin.CallHierarchy.Types
+
+  hs-source-dirs:     plugins/hls-call-hierarchy-plugin/src
+  build-depends:
+    , aeson
+    , base                  >=4.12 && <5
+    , containers
+    , extra
+    , ghcide                == 2.6.0.0
+    , hiedb
+    , hls-plugin-api        == 2.6.0.0
+    , lens
+    , lsp                    >=2.3
+    , sqlite-simple
+    , text
+
+  default-language:   Haskell2010
+  default-extensions: DataKinds
+
+test-suite hls-call-hierarchy-plugin-tests
+  import: warnings
+  type:             exitcode-stdio-1.0
+  default-language: Haskell2010
+  hs-source-dirs:   plugins/hls-call-hierarchy-plugin/test
+  main-is:          Main.hs
+  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
+  build-depends:
+    , aeson
+    , base
+    , containers
+    , extra
+    , filepath
+    , hls-call-hierarchy-plugin
+    , hls-test-utils              == 2.6.0.0
+    , ghcide-test-utils
+    , lens
+    , lsp
+    , lsp-test
+    , text
+
 -----------------------------
 -- eval plugin
 -----------------------------
